--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+
+
 body {
-    font-family: 'Stem';
+    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -43,6 +46,7 @@ a:hover {
 body#auth .container {
     gap: 94px;
 }
+
 
 .interactive-field {
     background: #FFF;
@@ -98,94 +102,6 @@ img#illustration {
     margin-top: auto;
     margin-bottom: 8px;
     color: #8A9099;
-}
-
-
-.google-btn {
-    display: flex;
-    align-items: center;
-    width: calc(100% - 4px);
-    height: 40px;
-
-    border: 2px solid #E8E9EB;
-    border-radius: var(--border-radius);
-    transition: all 150ms ease-in;
-}
-.google-btn p {
-    margin: auto;
-    padding-right: 19px;
-    user-select: none;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 19px;
-    color: #595F69;
-}
-.google-icon-wrapper {
-    margin-left: 14px;
-    height: 16px;
-}
-.google-icon-wrapper img {
-    user-select: none;
-    width: 15px;
-}
-.google-btn:hover {
-    background: #E8E9EB;
-    transition: all 150ms ease-in;
-}
-.google-btn:active {
-    background: #eeeef0;
-    transition: all 150ms ease-in;
-    box-shadow: 0px 5px 5px #bbbdc2; 
-}
-
-
-.login-btn {
-    background: #304FFD;
-    transition: all 150ms ease-in;
-    color: #FFFFFF;
-    border: none;
-    border-radius: var(--border-radius);
-    font-family: 'Stem';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 19px;
-    width: 100%;
-    height: 40px;
-}
-.login-btn:hover {
-    background: #5167e2;
-    transition: all 150ms ease-in;
-}
-.login-btn:active {
-    background: #5b71f0;
-    transition: all 150ms ease-in;
-    box-shadow: 0px 5px 5px #bbbdc2; 
-}
-
-
-.separator {
-    position: relative;
-    display: flex;
-    width: 100%;
-    opacity: 0.6;
-    margin: 15px 0px 15px 0px;
-}
-.separator hr {
-    position: absolute;
-    width: calc(100% - 2px);
-    border: none;
-    border-top: 2px solid #E8E9EB;
-}
-.separator span {
-    margin: auto;
-    z-index: 1;
-    background: white;
-    font-size: 12px;
-    line-height: 18px;
-    text-transform: uppercase;
-    color: #8A9099;
-    padding: 0 0.75rem 0 0.75rem;
 }
 
 
@@ -282,10 +198,6 @@ img#illustration {
     color: #304FFD;
 }
 
-.input-field__lose__mobile {
-    display: none;
-}
-
 
 @media screen and (max-width: 1680px) {
     .interactive-field__dataio {
@@ -355,91 +267,4 @@ img#illustration {
         width: 316px;
         height: 788px;
     }
-}
-
-
-
-
-@font-face {
-    font-family: 'Stem';
-    src: url('../css/font/Stem/Stem-Light.eot');
-    src: local('Stem Light'), local('Stem-Light'),
-        url('../css/font/Stem/Stem-Light.eot?#iefix') format('embedded-opentype'),
-        url('../css/font/Stem/Stem-Light.woff2') format('woff2'),
-        url('../css/font/Stem/Stem-Light.woff') format('woff'),
-        url('../css/font/Stem/Stem-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Stem';
-    src: url('../css/font/Stem/Stem-Medium.eot');
-    src: local('Stem Medium'), local('Stem-Medium'),
-        url('../css/font/Stem/Stem-Medium.eot?#iefix') format('embedded-opentype'),
-        url('../css/font/Stem/Stem-Medium.woff2') format('woff2'),
-        url('../css/font/Stem/Stem-Medium.woff') format('woff'),
-        url('../css/font/Stem/Stem-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Stem';
-    src: url('../css/font/Stem/Stem-Bold.eot');
-    src: local('Stem Bold'), local('Stem-Bold'),
-        url('../css/font/Stem/Stem-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../css/font/Stem/Stem-Bold.woff2') format('woff2'),
-        url('../css/font/Stem/Stem-Bold.woff') format('woff'),
-        url('../css/font/Stem/Stem-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Stem';
-    src: url('../css/font/Stem/Stem-SemiLight.eot');
-    src: local('Stem Semi Light'), local('Stem-SemiLight'),
-        url('../css/font/Stem/Stem-SemiLight.eot?#iefix') format('embedded-opentype'),
-        url('../css/font/Stem/Stem-SemiLight.woff2') format('woff2'),
-        url('../css/font/Stem/Stem-SemiLight.woff') format('woff'),
-        url('../css/font/Stem/Stem-SemiLight.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Stem';
-    src: url('../css/font/Stem/Stem-ExtraLight.eot');
-    src: local('Stem Extra Light'), local('Stem-ExtraLight'),
-        url('../css/font/Stem/Stem-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('../css/font/Stem/Stem-ExtraLight.woff2') format('woff2'),
-        url('../css/font/Stem/Stem-ExtraLight.woff') format('woff'),
-        url('../css/font/Stem/Stem-ExtraLight.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Stem';
-    src: url('../css/font/Stem/Stem-Thin.eot');
-    src: local('Stem Thin'), local('Stem-Thin'),
-        url('../css/font/Stem/Stem-Thin.eot?#iefix') format('embedded-opentype'),
-        url('../css/font/Stem/Stem-Thin.woff2') format('woff2'),
-        url('../css/font/Stem/Stem-Thin.woff') format('woff'),
-        url('../css/font/Stem/Stem-Thin.ttf') format('truetype');
-    font-weight: 100;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Stem';
-    src: url('../css/font/Stem/Stem-Regular.eot');
-    src: local('Stem Regular'), local('Stem-Regular'),
-        url('../css/font/Stem/Stem-Regular.eot?#iefix') format('embedded-opentype'),
-        url('../css/font/Stem/Stem-Regular.woff2') format('woff2'),
-        url('../css/font/Stem/Stem-Regular.woff') format('woff'),
-        url('../css/font/Stem/Stem-Regular.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
 }
