--- a/css/login-btn.css
+++ b/css/login-btn.css
@@ -6,9 +6,10 @@
     cursor: pointer;
     background: #304FFD;
     transition: all 250ms ease-in;
-    box-shadow: 0px 2px 2px #1d34b6;
-    color: #FFFFFF;
     border: none;
+    border-bottom: 2px solid #263bc2;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    color: #FFFFFF;
     border-radius: var(--border-radius);
     font-style: normal;
     font-weight: 500;
@@ -26,5 +27,6 @@
 .login-btn:active {
     background: #5b71f0;
     transition: all 150ms ease-in;
-    box-shadow: 0px 2px 2px #4760ec;
+    border-bottom: none;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
